buildscript {
    repositories {
        // These repositories are only for Gradle plugins, put any other repositories in the repository block further below
        maven { url = 'https://maven.minecraftforge.net' }
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
        classpath 'org.spongepowered:mixingradle:0.7.+'
    }
}

apply plugin: 'net.minecraftforge.gradle'
apply plugin: "idea"
apply plugin: "maven-publish"
apply plugin: 'org.spongepowered.mixin'

version = "${project.minecraftVersion}-${project.modVersion}"
group = 'com.blackout'
archivesBaseName = 'extendedslabs'

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    mappings channel: 'official', version: "1.19.3"
    runs {
        client {
            workingDirectory project.file("run")
            property "forge.logging.markers", "SCAN,REGISTRIES,REGISTRYDUMP"
            property "forge.logging.console.level", "debug"
            mods {
                extendedslabs {
                    source sourceSets.main
                }
            }
        }
        server {
            workingDirectory project.file("run")
            property "forge.logging.markers", "SCAN,REGISTRIES,REGISTRYDUMP"
            property "forge.logging.console.level", "debug"
            mods {
                extendedslabs {
                    source sourceSets.main
                }
            }
        }
        data {
            workingDirectory project.file("run")
            property "forge.logging.markers", "SCAN,REGISTRIES,REGISTRYDUMP"
            property "forge.logging.console.level", "debug"
            args '--mod', 'extendedslabs',
                    '--all',
                    '--output', file('src/main/generated/'),
                    '--existing', file('src/main/resources/')
            mods {
                extendedslabs {
                    source sourceSets.main
                }
            }
        }
    }
}

sourceSets {
    main.resources.srcDirs += 'src/main/generated'
}

dependencies {
    minecraft "net.minecraftforge:forge:${project.minecraftVersion}-${project.forgeVersion}"

    implementation fg.deobf("mezz.jei:jei-${project.minecraftVersion}-common-api:${project.jei}")
    implementation fg.deobf("mezz.jei:jei-${project.minecraftVersion}-forge-api:${project.jei}")
    implementation fg.deobf("mezz.jei:jei-${project.minecraftVersion}-forge:${project.jei}")

    implementation fg.deobf("curse.maven:configured-457570:${project.configured}")
    implementation fg.deobf("curse.maven:catalogue-459701:${project.catalogue}")

    implementation fg.deobf("curse.maven:the-one-probe-245211:${project.top}")
}

repositories {
    maven {
        name = "Progwml6 maven"
        url = "https://dvs1.progwml6.com/files/maven/"
    }
    maven {
        name = "ModMaven"
        url = "https://modmaven.k-4u.nl"
    }
    maven {
        name = "CurseForge"
        url = "https://www.cursemaven.com"
    }
}

jar {
    manifest {
        attributes([
                "Specification-Title"     : project.modName,
                "Specification-Vendor"    : "Blackout",
                "Specification-Version"   : "1",
                "Implementation-Title"    : project.modName,
                "Implementation-Version"  : project.modVersion,
                "Implementation-Vendor"   : "Blackout",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

jar.finalizedBy('reobfJar')
